[TEST][SPARK] fix